--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Tyler McGinnis <tylermcginnis33@gmail.com> (http://tylermcginnis.com)",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-router": "^2.8.1"
